Fix: grid row filler layout issue

--- a/packages/styled/DataGrid/DataGrid.module.css
+++ b/packages/styled/DataGrid/DataGrid.module.css
@@ -102,6 +102,7 @@
 .header .filler {
 	height: 100%;
 	overflow-y: auto;
+	position: absolute;
 	scrollbar-gutter: stable;
 }
 
